apps/cyberchef/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: cyberchef
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cyberchef
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cyberchef-ingress
  namespace: cyberchef
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: cyberchef
      app.kubernetes.io/instance: cyberchef
      app.kubernetes.io/name: cyberchef
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: public
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
